# ifc-geo-validator

./: .coverage  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  SECURITY.md  demo.py  docker-compose.yml  generate_thesis_figures.py  generate_thesis_figures_v2.py  pyproject.toml  requirements.txt  review_checklist.py  sensitivity_analysis.py  start.bat  start.sh  streamlit_app.py  validate_all_models.py  view.py
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
.streamlit/: config.toml
_bench_outputs/: out.csv  out.html  out.ids  out.json  out.xlsx
docs/: deployment.md  privacy.md  quickstart.md  references.md  variable_reference.md
src/ifc_geo_validator/: __init__.py  app.py  cli.py  i18n.py  review_app.py  ruleset_editor.py
src/ifc_geo_validator/core/: __init__.py  advanced_geometry.py  anomaly_detection.py  auto_config.py  distance.py  face_classifier.py  geometry.py  ifc_compare.py  ifc_parser.py  mesh_converter.py  project_config.py
src/ifc_geo_validator/report/: bcf_export.py  html_report.py  ids_export.py  ifc_property_writer.py  json_report.py  summary_stats.py  xlsx_report.py
src/ifc_geo_validator/rules/: variables.py
src/ifc_geo_validator/rules/rulesets/: astra_fhb_komplett.yaml  astra_fhb_laermschutz.yaml  astra_fhb_stuetzmauer.yaml  astra_fhb_tunnel.yaml  astra_fhb_widerlager.yaml  sia_262_stuetzmauer.yaml
src/ifc_geo_validator/validation/: __init__.py  alignment.py  clearance.py  level1.py  level2.py  level3.py  level4.py  level5.py  level6.py
src/ifc_geo_validator/viz/: cross_section.py  face_plot.py  mesh_viewer.py  plotly_viewer.py  slope_heatmap.py  webifc_viewer.py
tests/: create_test_model_t10.py  create_test_model_t11.py  create_test_model_t12.py  create_test_model_t13.py  create_test_model_t14.py  create_test_model_t14_v2.py  create_test_model_t15.py  create_test_model_t16.py  create_test_model_t17.py  create_test_model_t18.py  create_test_model_t19.py  create_test_model_t20.py  create_test_model_t21.py  create_test_model_t22.py  create_test_model_t23.py  create_test_model_t24.py  create_test_model_t25.py  create_test_model_t26.py  create_test_model_t27.py  create_test_model_t27_complex_long.py  create_test_model_t28.py  create_test_model_t4_v2.py  create_test_model_t5_v2.py  create_test_model_t8.py  create_test_model_t9.py  create_test_model_t9_v2.py  test_advanced_geometry.py  test_anomaly_detection.py  test_bcf_export.py  test_clearance.py  test_config_and_utils.py  test_edge_cases.py  test_json_report.py  test_level1.py  test_level2.py  test_level3.py  test_level4.py  test_level5.py  test_level6.py  test_market_readiness.py  (+6 more)
tests/test_models/: T10_complex_curved.ifc  T11_s_curved.ifc  T12_semicircle.ifc  T13_polygonal.ifc  T14_curved_l_profile.ifc  T15_variable_height.ifc  T16_height_step.ifc  T17_curved_variable.ifc  T18_buttressed.ifc  T1_simple_box.ifc  T20_triangulated.ifc  T21_extruded_trapezoid.ifc  T22_with_terrain.ifc  T23_astra_compliant_curved.ifc  T24_highway_with_terrain.ifc  T25_multi_failure.ifc  T26_extruded_curved.ifc  T27_long_curved_slope.ifc  T28_showcase.ifc  T2_inclined_wall.ifc  T3_crown_slope.ifc  T4_l_shaped.ifc  T5_t_shaped.ifc  T6_non_compliant.ifc  T7_compliant.ifc  T8_curved_wall.ifc  T9_stepped_wall.ifc
viewer/: app_server.py  export_for_viewer.py  index.html  model_data.json  server.py  viewer.html
